--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@
     <button type="button" class="btn btn-danger">Sort By Date</button>
 </header>
  <!-- HEADER SECTION ENDS-->
+ <!-- MAIN SECTION -->
+ <main class="container">
+    <section>
+            <!-- cards -->
+            <div id="ai-container" class="row row-cols-1 row-cols-md-3 g-4">
+                
+              </div>
+            <!-- cards -->
+    </section>
+ </main>
+ <!-- MAIN SECTION ENDS -->
 
 <!-- JAVASCRIPT LINKS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
