--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ASSIGNMENT-SIX</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <!-- font awesome -->
+   
   </head>
   <body>
     <!-- HEADER SECTION -->
@@ -14,15 +16,19 @@
 </header>
  <!-- HEADER SECTION ENDS-->
  <!-- MAIN SECTION -->
- <main class="container">
+ <main class="container mt-4">
     <section>
             <!-- cards -->
-            <div id="ai-container" class="row row-cols-1 row-cols-md-3 g-4">
-                
+            <div id="ai-container" class="row row-cols-1 row-cols-md-3 g-4">  
+                <!-- <ol id="feature-list"></ol> -->
               </div>
+              
             <!-- cards -->
     </section>
  </main>
+ <footer class="text-center mt-5">
+    <button id="btn-see-more" type="button" class="btn btn-danger">See More</button>
+ </footer>
  <!-- MAIN SECTION ENDS -->
 
 <!-- JAVASCRIPT LINKS -->
