--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>ASSIGNMENT-SIX</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!-- font awesome -->
-   
+    <script src="https://kit.fontawesome.com/5aae4d33c8.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <!-- HEADER SECTION -->
@@ -24,6 +24,13 @@
               </div>
               
             <!-- cards -->
+    </section>
+    <section id="loader" class="d-none">
+        <div class="d-flex justify-content-center align-items-center">
+            <div class="spinner-border" role="status">
+              <span class="visually-hidden">Loading...</span>
+            </div>
+          </div>
     </section>
  </main>
  <footer class="text-center mt-5">
